# Makefile

./: 1.mk  Makefile  Makefile1  Makefile3  README.md  app.out  const.c  define.h  func.c  func.h  main.c  makefile2  new.h  test.txt
20/common/: makefile
cmake/demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake  cmake_install.cmake  main.cc
cmake/demo2/: CMakeCache.txt  Makefile  MathFunctions.cc  MathFunctions.h  cmake  cmake_install.cmake  main.cc
cmake/demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake  cmake_install.cmake  main.c
cmake/demo3/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/demo4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake  cmake_install.cmake
cmake/demo4/math/: Makefile  cmake_install.cmake
cmake/demo5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake  cmake_install.cmake  main.c
cmake/demo5/Testing/Temporary/: CTestCostData.txt
cmake/demo5/math/: CMakeLists.txt  Makefile  MathFunctions.h  cmake_install.cmake
common/: Makefile
common/src/: func.c
src1/: func.c
src2/: func.c
